--- a/content/w8.html
+++ b/content/w8.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='w1.html'>w1</a><li><a href='w8.html'>w8</a></li>
+                     <li><a href='w1-w2.html'>w1-w2</a><li><a href='w8.html'>w8</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,9 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <br /><h1>w8</h1>
+    <div id="tipue_search_content">w1-w2 << <a href='w1-w2.html'>Previous</a> <br /><h1>w8</h1>
 <p><br/><br/><br/><br/><br/><span>meeting     </span><a href="https://meet.google.com/zen-ewrh-zfy">https://meet.google.com/zen-ewrh-zfy</a><span> 第四組<span> </span></span><br/><span>2001:288:6004:17::53</span><br/><span>2001:288:6004:17::42<br/></span><span>2001:288:6004:17::17<br/>2001:288:6004:17::4 "虛擬主機 不耐操 可以校外連接"</span> <br/>可能線上上課<br/>組員:<span> </span><span class="number">50833102 組長<br/></span><span> </span><span class="number">50833103</span><span> <br/></span><span class="number">50833105</span><span> <br/></span><span class="number">50833109</span><span> <br/></span><span class="number">50833121</span><span> <br/></span><span class="number">50833124</span><span> <br/></span><span class="number">50833135</span><span> <br/></span><span class="number">50833136</span><span> <br/></span><span class="number">50833137<br/></span><span> </span><span class="number">50833139 <span>group </span><span class="number">4</span></span> <span></span></p>
-<p><span></span></p><br />w1 << <a href='w1.html'>Previous</a> </div>
+<p><span></span></p><br />w1-w2 << <a href='w1-w2.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
