--- a/content/.html
+++ b/content/.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='w1-w2.html'>w1-w2</a><li><a href='w8.html'>w8</a></li>
+                     <li><a href='w1-w2.html'>w1-w2</a><li class='has-children'><a href='w8-9.html'>w8-9</a><ul class='dropdown'><li><a href='網路架構與設定簡介.html'>網路架構與設定簡介</a><li class='has-children'><a href='電腦軟硬體簡介.html'>電腦軟硬體簡介</a><ul class='dropdown'><li><a href='機殼：容納和保護主機營體的主機殼.html'>機殼：容納和保護主機營體的主機殼</a><li><a href='電源(Power)：是提供內接式元件電力來源的組件，他將市電轉換為直流電供給其他元件使用.html'>電源(Power)：是提供內接式元件電力來源的組件，他將市電轉換為直流電供給其他元件使用</a><li><a href='顯示卡(VGA )：顯示卡在電腦中主要作用就是程式運行時根據CPU提共的指令和有關數據.html'>顯示卡(VGA )：顯示卡在電腦中主要作用就是程式運行時根據CPU提共的指令和有關數據</a><li><a href='網路卡：網路卡是電腦與纜線的介面，有依各專門處裡網路介面的處裡器，會依照記憶體內程式動作。.html'>網路卡：網路卡是電腦與纜線的介面，有依各專門處裡網路介面的處裡器，會依照記憶體內程式動作。</a><li><a href='硬碟：硬碟就是電腦中負責儲存資料的工具，它就像是一各資料庫依樣，電腦中的大小資料均可以在此找到.html'>硬碟：硬碟就是電腦中負責儲存資料的工具，它就像是一各資料庫依樣，電腦中的大小資料均可以在此找到</a><li><a href='軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。.html'>軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。</a><li><a href='.html'></a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,9 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w1-w2 << <a href='w1-w2.html'>Previous</a> <br /><h1>w8</h1>
-<p><br/><br/><br/><br/><br/><span>meeting     </span><a href="https://meet.google.com/zen-ewrh-zfy">https://meet.google.com/zen-ewrh-zfy</a><span> 第四組<span> </span></span><br/><span>2001:288:6004:17::53</span><br/><span>2001:288:6004:17::42<br/></span><span>2001:288:6004:17::17<br/>2001:288:6004:17::4 "虛擬主機 不耐操 可以校外連接"</span> <br/>可能線上上課<br/>組員:<span> </span><span class="number">50833102 組長<br/></span><span> </span><span class="number">50833103</span><span> <br/></span><span class="number">50833105</span><span> <br/></span><span class="number">50833109</span><span> <br/></span><span class="number">50833121</span><span> <br/></span><span class="number">50833124</span><span> <br/></span><span class="number">50833135</span><span> <br/></span><span class="number">50833136</span><span> <br/></span><span class="number">50833137<br/></span><span> </span><span class="number">50833139 <span>group </span><span class="number">4</span></span> <span></span></p>
-<p><span></span></p><br />w1-w2 << <a href='w1-w2.html'>Previous</a> </div>
+    <div id="tipue_search_content">軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。 << <a href='軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。.html'>Previous</a> <br /><h1></h1><br />軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。 << <a href='軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
