--- a/content/硬碟：硬碟就是電腦中負責儲存資料的工具，它就像是一各資料庫依樣，電腦中的大小資料均可以在此找到.html
+++ b/content/硬碟：硬碟就是電腦中負責儲存資料的工具，它就像是一各資料庫依樣，電腦中的大小資料均可以在此找到.html
@@ -154,12 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='w8-9.html'>Next</a> >> w8-9<br /><h1>w1-w2</h1>
-<p>建立一個bloger <a href="https://www.blogger.com/blogger.g?blogID=2375246514797626273#allposts/src=sidebar">https://www.blogger.com/blogger.g?blogID=2375246514797626273#allposts/src=sidebar</a><br/><br/>建立一個github <a href="https://github.com/">https://github.com/</a>50833109<br/> <br/>1 super computer 超級電腦<br/>2 mainframe 伺服器主機<br/>3 server 伺服器 虛擬 實體<br/>4 pc 個人電腦<br/>5 microcontroller 微控制器<br/>6 mobile phone 手機<br/><br/>Port 戶號<br/>Nat <br/>DHCP動態網路位置</p>
-<p><br/><br/><br/>w6-7</p>
-<p>利用手機鏡頭當作 webcam:</p>
-<p>Android:<span> </span><a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows<br/></a> <br/>iPhone:<span> </span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a> </p>
-<br /> <a href='w8-9.html'>Next</a> >> w8-9</div>
+    <div id="tipue_search_content">網路卡：網路卡是電腦與纜線的介面，有依各專門處裡網路介面的處裡器，會依照記憶體內程式動作。 << <a href='網路卡：網路卡是電腦與纜線的介面，有依各專門處裡網路介面的處裡器，會依照記憶體內程式動作。.html'>Previous</a> <a href='軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。.html'>Next</a> >> 軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。<br /><h1>硬碟：硬碟就是電腦中負責儲存資料的工具，它就像是一各資料庫依樣，電腦中的大小資料均可以在此找到</h1>
+<br />網路卡：網路卡是電腦與纜線的介面，有依各專門處裡網路介面的處裡器，會依照記憶體內程式動作。 << <a href='網路卡：網路卡是電腦與纜線的介面，有依各專門處裡網路介面的處裡器，會依照記憶體內程式動作。.html'>Previous</a> <a href='軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。.html'>Next</a> >> 軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。</div>
         
     <!-- footer -->
       <div class="container">
