--- a/content/網路架構與設定簡介.html
+++ b/content/網路架構與設定簡介.html
@@ -154,12 +154,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='w8-9.html'>Next</a> >> w8-9<br /><h1>w1-w2</h1>
-<p>建立一個bloger <a href="https://www.blogger.com/blogger.g?blogID=2375246514797626273#allposts/src=sidebar">https://www.blogger.com/blogger.g?blogID=2375246514797626273#allposts/src=sidebar</a><br/><br/>建立一個github <a href="https://github.com/">https://github.com/</a>50833109<br/> <br/>1 super computer 超級電腦<br/>2 mainframe 伺服器主機<br/>3 server 伺服器 虛擬 實體<br/>4 pc 個人電腦<br/>5 microcontroller 微控制器<br/>6 mobile phone 手機<br/><br/>Port 戶號<br/>Nat <br/>DHCP動態網路位置</p>
-<p><br/><br/><br/>w6-7</p>
-<p>利用手機鏡頭當作 webcam:</p>
-<p>Android:<span> </span><a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows<br/></a> <br/>iPhone:<span> </span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a> </p>
-<br /> <a href='w8-9.html'>Next</a> >> w8-9</div>
+    <div id="tipue_search_content">w8-9 << <a href='w8-9.html'>Previous</a> <a href='電腦軟硬體簡介.html'>Next</a> >> 電腦軟硬體簡介<br /><h1>網路架構與設定簡介</h1>
+<p>在正式進入主題之前，先來了解為何網路使用分層結構，而非從頭到腳一手全包的設計。由於網路需考量許多實際應用上的困難，如傳輸不同種類的資訊、不同版本以及作業系統的交流需求，甚至牽扯到更廣大的範圍，如遠距微波傳送、跨洲海底電纜等不同傳輸媒介。如果要設計能夠包山包海、全部通吃的網路架構是件吃力不討好的事，況且也無法預測未來會出現什麼需求，於是需要個具有彈性的網路架構，還要能夠兼顧未來發展。<br/><br/><br/></p>
+<h4>應用層（Application Layer）</h4>
+<p>應用層（英語：</p>
+<p><span lang="en"><b>Application layer</b></span><span>）位於</span><a href="https://zh.m.wikipedia.org/wiki/OSI%E6%A8%A1%E5%9E%8B" title="OSI模型">OSI模型</a><span>的第七層。應用層直接和應用程式介面結合，並提供常見的網路應用服務。應用層也向第六層</span><a href="https://zh.m.wikipedia.org/wiki/%E8%A1%A8%E7%A4%BA%E5%B1%82" title="表現層">表現層</a><span>發出請求。</span></p>
+<h4>傳輸層（Transport Layer）<br/><br/><span class="searchmatch">傳輸</span><span class="searchmatch">層</span><span>（英語：</span><span class="searchmatch">Transport</span><span><span> </span></span><span class="searchmatch">Layer</span><span>）在計算機網絡中是網際網路協議套件與開放系統互連（英語：Open Systems Interconnection）（OSI）網絡堆疊中協議的分</span><span class="searchmatch">層</span><span>結構中的方法的一個概念劃分。該</span><span class="searchmatch">層</span><span>的協議為應用進程提供端到端的通信服務。 它提供面向連接的數據流</span></h4>
+<h4>網路層（Transport Layer）<br/><br/><span>網絡</span><span class="searchmatch">層</span><span>（Network<span> </span></span><span class="searchmatch">Layer</span><span>）是OSI模型中的第三</span><span class="searchmatch">層</span><span>（TCP/IP模型中的網際</span><span class="searchmatch">層</span><span>），提供路由和尋址的功能，使兩終端系統能夠互連且決定最佳路徑，並具有一定的擁塞控制和流量控制的能力。相當於傳送郵件時需要地址一般重要。由於TCP/IP協議體系中的</span><span class="searchmatch">網路</span><span class="searchmatch">層</span><span>功能由IP協議規定和實現，故又稱IP</span><span class="searchmatch">層</span></h4>
+<h4>鏈結層（Link Level）<br/><br/><span>是</span><span lang="en"><a href="https://zh.m.wikipedia.org/wiki/OSI%E6%A8%A1%E5%9E%8B" title="OSI模型">OSI参考模型</a></span><span>第二層，位於</span><a href="https://zh.m.wikipedia.org/wiki/%E7%89%A9%E7%90%86%E5%B1%82" title="實體層">實體層</a><span>與</span><a href="https://zh.m.wikipedia.org/wiki/%E7%BD%91%E7%BB%9C%E5%B1%82" title="網路層">網路層</a><span>之間。在廣播式多路存取鏈路中（區域網路），由於可能存在媒介爭用，它還可以細分成</span><a href="https://zh.m.wikipedia.org/wiki/%E4%BB%8B%E8%B4%A8%E8%AE%BF%E9%97%AE%E6%8E%A7%E5%88%B6" title="媒介存取控制">媒介存取控制</a><span>（MAC）子層和</span><a href="https://zh.m.wikipedia.org/wiki/%E9%80%BB%E8%BE%91%E9%93%BE%E8%B7%AF%E6%8E%A7%E5%88%B6" title="邏輯鏈路控制">邏輯鏈路控制</a><span>（LLC）子層，</span><a href="https://zh.m.wikipedia.org/wiki/%E4%BB%8B%E8%B4%A8%E8%AE%BF%E9%97%AE%E6%8E%A7%E5%88%B6" title="媒介存取控制">媒介存取控制</a><span>（MAC）子層專職處理媒介存取的爭用與衝突問題。</span></h4>
+<p><span></span></p>
+<br />w8-9 << <a href='w8-9.html'>Previous</a> <a href='電腦軟硬體簡介.html'>Next</a> >> 電腦軟硬體簡介</div>
         
     <!-- footer -->
       <div class="container">
