--- a/content/電源(Power)：是提供內接式元件電力來源的組件，他將市電轉換為直流電供給其他元件使用.html
+++ b/content/電源(Power)：是提供內接式元件電力來源的組件，他將市電轉換為直流電供給其他元件使用.html
@@ -154,12 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='w8-9.html'>Next</a> >> w8-9<br /><h1>w1-w2</h1>
-<p>建立一個bloger <a href="https://www.blogger.com/blogger.g?blogID=2375246514797626273#allposts/src=sidebar">https://www.blogger.com/blogger.g?blogID=2375246514797626273#allposts/src=sidebar</a><br/><br/>建立一個github <a href="https://github.com/">https://github.com/</a>50833109<br/> <br/>1 super computer 超級電腦<br/>2 mainframe 伺服器主機<br/>3 server 伺服器 虛擬 實體<br/>4 pc 個人電腦<br/>5 microcontroller 微控制器<br/>6 mobile phone 手機<br/><br/>Port 戶號<br/>Nat <br/>DHCP動態網路位置</p>
-<p><br/><br/><br/>w6-7</p>
-<p>利用手機鏡頭當作 webcam:</p>
-<p>Android:<span> </span><a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows<br/></a> <br/>iPhone:<span> </span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a> </p>
-<br /> <a href='w8-9.html'>Next</a> >> w8-9</div>
+    <div id="tipue_search_content">機殼：容納和保護主機營體的主機殼 << <a href='機殼：容納和保護主機營體的主機殼.html'>Previous</a> <a href='顯示卡(VGA )：顯示卡在電腦中主要作用就是程式運行時根據CPU提共的指令和有關數據.html'>Next</a> >> 顯示卡(VGA )：顯示卡在電腦中主要作用就是程式運行時根據CPU提共的指令和有關數據<br /><h1>電源(Power)：是提供內接式元件電力來源的組件，他將市電轉換為直流電供給其他元件使用</h1>
+<br />機殼：容納和保護主機營體的主機殼 << <a href='機殼：容納和保護主機營體的主機殼.html'>Previous</a> <a href='顯示卡(VGA )：顯示卡在電腦中主要作用就是程式運行時根據CPU提共的指令和有關數據.html'>Next</a> >> 顯示卡(VGA )：顯示卡在電腦中主要作用就是程式運行時根據CPU提共的指令和有關數據</div>
         
     <!-- footer -->
       <div class="container">
