--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,21 +1,66 @@
 <h1>w1-w2</h1>
 <p>建立一個bloger <a href="https://www.blogger.com/blogger.g?blogID=2375246514797626273#allposts/src=sidebar">https://www.blogger.com/blogger.g?blogID=2375246514797626273#allposts/src=sidebar</a><br/><br/>建立一個github <a href="https://github.com/">https://github.com/</a>50833109<br/> <br/>1 super computer 超級電腦<br/>2 mainframe 伺服器主機<br/>3 server 伺服器 虛擬 實體<br/>4 pc 個人電腦<br/>5 microcontroller 微控制器<br/>6 mobile phone 手機<br/><br/>Port 戶號<br/>Nat <br/>DHCP動態網路位置</p>
-<p><br/><br/><br/>w6-7</p>
+<h1>w6-7</h1>
 <p>利用手機鏡頭當作 webcam:</p>
 <p>Android:<span> </span><a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows<br/></a> <br/>iPhone:<span> </span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a> </p>
 <h1>w8-9</h1>
 <p><br/><br/><br/><br/><br/><span>meeting     </span><a href="https://meet.google.com/zen-ewrh-zfy">https://meet.google.com/zen-ewrh-zfy</a><span> 第四組<span> </span></span><br/><span>2001:288:6004:17::53</span><br/><span>2001:288:6004:17::42<br/></span><span>2001:288:6004:17::17<br/>2001:288:6004:17::4 "虛擬主機 不耐操 可以校外連接"</span> <br/>可能線上上課<br/>組員:<span> </span><span class="number">50833102 組長<br/></span><span> </span><span class="number">50833103</span><span> <br/></span><span class="number">50833105</span><span> <br/></span><span class="number">50833109</span><span> <br/></span><span class="number">50833121</span><span> <br/></span><span class="number">50833124</span><span> <br/></span><span class="number">50833135</span><span> <br/></span><span class="number">50833136</span><span> <br/></span><span class="number">50833137<br/></span><span> </span><span class="number">50833139 <span>group </span><span class="number">4</span></span> <span></span></p>
 <p><span class="number"><span class="number"></span></span></p>
-<p><br/><br/><br/>w9<br/><br/></p>
+<p><br/><br/>w9<br/><br/></p>
 <h2><span>網路架構與設定簡介</span></h2>
-<p>在正式進入主題之前，先來了解為何網路使用分層結構，而非從頭到腳一手全包的設計。由於網路需考量許多實際應用上的困難，如傳輸不同種類的資訊、不同版本以及作業系統的交流需求，甚至牽扯到更廣大的範圍，如遠距微波傳送、跨洲海底電纜等不同傳輸媒介。如果要設計能夠包山包海、全部通吃的網路架構是件吃力不討好的事，況且也無法預測未來會出現什麼需求，於是需要個具有彈性的網路架構，還要能夠兼顧未來發展。<br/><br/><br/></p>
-<h4>應用層（Application Layer）</h4>
-<p>應用層（英語：</p>
-<p><span lang="en"><b>Application layer</b></span><span>）位於</span><a href="https://zh.m.wikipedia.org/wiki/OSI%E6%A8%A1%E5%9E%8B" title="OSI模型">OSI模型</a><span>的第七層。應用層直接和應用程式介面結合，並提供常見的網路應用服務。應用層也向第六層</span><a href="https://zh.m.wikipedia.org/wiki/%E8%A1%A8%E7%A4%BA%E5%B1%82" title="表現層">表現層</a><span>發出請求。</span></p>
-<h4>傳輸層（Transport Layer）<br/><br/><span class="searchmatch">傳輸</span><span class="searchmatch">層</span><span>（英語：</span><span class="searchmatch">Transport</span><span><span> </span></span><span class="searchmatch">Layer</span><span>）在計算機網絡中是網際網路協議套件與開放系統互連（英語：Open Systems Interconnection）（OSI）網絡堆疊中協議的分</span><span class="searchmatch">層</span><span>結構中的方法的一個概念劃分。該</span><span class="searchmatch">層</span><span>的協議為應用進程提供端到端的通信服務。 它提供面向連接的數據流</span></h4>
-<h4>網路層（Transport Layer）<br/><br/><span>網絡</span><span class="searchmatch">層</span><span>（Network<span> </span></span><span class="searchmatch">Layer</span><span>）是OSI模型中的第三</span><span class="searchmatch">層</span><span>（TCP/IP模型中的網際</span><span class="searchmatch">層</span><span>），提供路由和尋址的功能，使兩終端系統能夠互連且決定最佳路徑，並具有一定的擁塞控制和流量控制的能力。相當於傳送郵件時需要地址一般重要。由於TCP/IP協議體系中的</span><span class="searchmatch">網路</span><span class="searchmatch">層</span><span>功能由IP協議規定和實現，故又稱IP</span><span class="searchmatch">層</span></h4>
-<h4>鏈結層（Link Level）<br/><br/><span>是</span><span lang="en"><a href="https://zh.m.wikipedia.org/wiki/OSI%E6%A8%A1%E5%9E%8B" title="OSI模型">OSI参考模型</a></span><span>第二層，位於</span><a href="https://zh.m.wikipedia.org/wiki/%E7%89%A9%E7%90%86%E5%B1%82" title="實體層">實體層</a><span>與</span><a href="https://zh.m.wikipedia.org/wiki/%E7%BD%91%E7%BB%9C%E5%B1%82" title="網路層">網路層</a><span>之間。在廣播式多路存取鏈路中（區域網路），由於可能存在媒介爭用，它還可以細分成</span><a href="https://zh.m.wikipedia.org/wiki/%E4%BB%8B%E8%B4%A8%E8%AE%BF%E9%97%AE%E6%8E%A7%E5%88%B6" title="媒介存取控制">媒介存取控制</a><span>（MAC）子層和</span><a href="https://zh.m.wikipedia.org/wiki/%E9%80%BB%E8%BE%91%E9%93%BE%E8%B7%AF%E6%8E%A7%E5%88%B6" title="邏輯鏈路控制">邏輯鏈路控制</a><span>（LLC）子層，</span><a href="https://zh.m.wikipedia.org/wiki/%E4%BB%8B%E8%B4%A8%E8%AE%BF%E9%97%AE%E6%8E%A7%E5%88%B6" title="媒介存取控制">媒介存取控制</a><span>（MAC）子層專職處理媒介存取的爭用與衝突問題。</span></h4>
-<p><span></span></p>
+<p>在正式進入主題之前，先來了解為何網路使用分層結構，而非從頭到腳一手全包的設計。由於網路需考量許多實際應用上的困難，如傳輸不同種類的資訊、不同版本以及作業系統的交流需求，甚至牽扯到更廣大的範圍，如遠距微波傳送、跨洲海底電纜等不同傳輸媒介。如果要設計能夠包山包海、全部通吃的網路架構是件吃力不討好的事，況且也無法預測未來會出現什麼需求，於是需要個具有彈性的網路架構，還要能夠兼顧未來發展</p>
+<p></p>
+<br/><br/><br/>實體層 (Physical Layer)
+<ul>
+<li>訂定電腦連接的電氣特定協定</li>
+<li>功能 :1.讓資料可經由傳輸媒介   2.兩個實際相連的機器間傳送的</li>
+<li>例子 :實體層介面有EIA RE-232、RS-449等，而常見區域網路則有乙太網路、記號環、分散式光纖數據介面、CCITT X.25分封網路、整體服務數位網路、同步光學網路等。<br/><br/></li>
+</ul>
+<h3>資料鏈結層 (Data-Link Layer)</h3>
+<ul>
+<li>訊框 (frame) 與實體位置 (MAC)</li>
+<li>分為兩個子層：</li>
+<li>(一)邏輯連結控制(Logical Link Control, 簡稱LLC)：訊框遞送、錯誤通知、資料流控制</li>
+<li>(二)媒介存取控制(Media Access Control, 簡稱MAC)：定義傳輸媒體存取的方式，如CSMA/CD、Token Ring等</li>
+<li>例子 ：Physical Address、<span>OSI規定網路上各乙太網路、記號環網路、橋接器等都是在此層運作的。</span></li>
+</ul>
+<h3>網路層 (Network Layer)</h3>
+<ul>
+<li>邏輯定址</li>
+<li>資料封包 (packet) 的傳輸路徑(Routing)選擇</li>
+<li>功能：1.決定移動資料的最佳方式(RIP、EIGRP、OSPF) 2.資料遶送 3.錯誤控制(少用)</li>
+<li>例子：IP、IPX、路由器</li>
+</ul>
+<p><br/>傳輸層 (Transport Layer)<br/><br/></p>
+<ul>
+<li>提供可靠或不可靠的遞送</li>
+<li>重傳之前先校正錯誤</li>
+<li>功能 ：封包順序、資料流量控制、偵測重複的封包、緊急資料的傳送、複雜的錯誤與回復處理、以及安全方面的課題。</li>
+<li>例子 ：TCP 、 UDP</li>
+</ul>
+<p><br/><br/><br/> <br/>交談層 (Session Layer)<span>  </span><span> </span></p>
+<ul>
+<li>負責建立、管理、以及終止兩個通訊主機的對話</li>
+<li>功能 ：使不同應用程式的資料與其他應用程式的資料分開</li>
+<li>例子 ：SQL 、 RPC<span> <br/><br/><br/></span></li>
+</ul>
+<h3>表現層 (Presentation Layer</h3>
+<ul>
+<li>處理不同資料格式之間的字碼轉換及編碼及解碼</li>
+<li>功能：字元碼轉換  資料形態轉換  對資料進行壓縮和加密﹐以提高速度和增加安全性</li>
+<li>例子：ASCII 碼和 EDCDIC 碼之間的轉換<br/><br/></li>
+</ul>
+<h3>應用層 (Application Layer)</h3>
+<ul>
+<li>提供使用者介面</li>
+<li>功能：檔案、印表、訊息、資料庫、應用服務</li>
+<li>例子：HTTP 、 Telnet 、 SMTP 、 POP3 、 FTP 、 SNMP</li>
+</ul>
 <h2><span>電腦軟硬體簡介</span></h2>
-<h3><span>機殼：容納和保護主機營體的主機殼<br/><br/>電源(Power)：是提供內接式元件電力來源的組件，他將市電轉換為直流電供給其他元件使用<br/><br/>顯示卡(VGA )：顯示卡在電腦中主要作用就是程式運行時根據CPU提共的指令和有關數據<br/><br/>網路卡：網路卡是電腦與纜線的介面，有依各專門處裡網路介面的處裡器，會依照記憶體內程式動作。<br/><br/>硬碟：硬碟就是電腦中負責儲存資料的工具，它就像是一各資料庫依樣，電腦中的大小資料均可以在此找到<br/><br/>軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。<br/></span></h3>
+<h3><span>機殼：容納和保護主機營體的主機殼</span></h3>
+<h3><span><br/>電源(Power)：是提供內接式元件電力來源的組件，他將市電轉換為直流電供給其他元件使用</span></h3>
+<h3><span><br/>顯示卡(VGA )：顯示卡在電腦中主要作用就是程式運行時根據CPU提共的指令和有關數據</span></h3>
+<h3><span><br/>網路卡：網路卡是電腦與纜線的介面，有依各專門處裡網路介面的處裡器，會依照記憶體內程式動作。</span></h3>
+<h3><span><br/>硬碟：硬碟就是電腦中負責儲存資料的工具，它就像是一各資料庫依樣，電腦中的大小資料均可以在此找到</span></h3>
+<h3><span><br/>軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。<br/></span></h3>
 <h3><span> </span></h3>
