--- a/content/w6-7.html
+++ b/content/w6-7.html
@@ -154,16 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w8-9 << <a href='w8-9.html'>Previous</a> <a href='資料鏈結層 (Data-Link Layer).html'>Next</a> >> 資料鏈結層 (Data-Link Layer)<br /><h1>網路架構與設定簡介</h1>
-<p>在正式進入主題之前，先來了解為何網路使用分層結構，而非從頭到腳一手全包的設計。由於網路需考量許多實際應用上的困難，如傳輸不同種類的資訊、不同版本以及作業系統的交流需求，甚至牽扯到更廣大的範圍，如遠距微波傳送、跨洲海底電纜等不同傳輸媒介。如果要設計能夠包山包海、全部通吃的網路架構是件吃力不討好的事，況且也無法預測未來會出現什麼需求，於是需要個具有彈性的網路架構，還要能夠兼顧未來發展</p>
-<p></p>
-<p><br/><br/><br/>實體層 (Physical Layer)</p>
-<ul>
-<li>訂定電腦連接的電氣特定協定</li>
-<li>功能 :1.讓資料可經由傳輸媒介   2.兩個實際相連的機器間傳送的</li>
-<li>例子 :實體層介面有EIA RE-232、RS-449等，而常見區域網路則有乙太網路、記號環、分散式光纖數據介面、CCITT X.25分封網路、整體服務數位網路、同步光學網路等。<br/><br/></li>
-</ul>
-<br />w8-9 << <a href='w8-9.html'>Previous</a> <a href='資料鏈結層 (Data-Link Layer).html'>Next</a> >> 資料鏈結層 (Data-Link Layer)</div>
+    <div id="tipue_search_content">w1-w2 << <a href='w1-w2.html'>Previous</a> <a href='w8-9.html'>Next</a> >> w8-9<br /><h1>w6-7</h1>
+<p>利用手機鏡頭當作 webcam:</p>
+<p>Android:<span> </span><a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows<br/></a> <br/>iPhone:<span> </span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a> </p>
+<br />w1-w2 << <a href='w1-w2.html'>Previous</a> <a href='w8-9.html'>Next</a> >> w8-9</div>
         
     <!-- footer -->
       <div class="container">
