--- a/content/網路層 (Network Layer).html
+++ b/content/網路層 (Network Layer).html
@@ -154,16 +154,27 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w8-9 << <a href='w8-9.html'>Previous</a> <a href='資料鏈結層 (Data-Link Layer).html'>Next</a> >> 資料鏈結層 (Data-Link Layer)<br /><h1>網路架構與設定簡介</h1>
-<p>在正式進入主題之前，先來了解為何網路使用分層結構，而非從頭到腳一手全包的設計。由於網路需考量許多實際應用上的困難，如傳輸不同種類的資訊、不同版本以及作業系統的交流需求，甚至牽扯到更廣大的範圍，如遠距微波傳送、跨洲海底電纜等不同傳輸媒介。如果要設計能夠包山包海、全部通吃的網路架構是件吃力不討好的事，況且也無法預測未來會出現什麼需求，於是需要個具有彈性的網路架構，還要能夠兼顧未來發展</p>
-<p></p>
-<p><br/><br/><br/>實體層 (Physical Layer)</p>
+    <div id="tipue_search_content">資料鏈結層 (Data-Link Layer) << <a href='資料鏈結層 (Data-Link Layer).html'>Previous</a> <a href='表現層 (Presentation Layer.html'>Next</a> >> 表現層 (Presentation Layer<br /><h1>網路層 (Network Layer)</h1>
 <ul>
-<li>訂定電腦連接的電氣特定協定</li>
-<li>功能 :1.讓資料可經由傳輸媒介   2.兩個實際相連的機器間傳送的</li>
-<li>例子 :實體層介面有EIA RE-232、RS-449等，而常見區域網路則有乙太網路、記號環、分散式光纖數據介面、CCITT X.25分封網路、整體服務數位網路、同步光學網路等。<br/><br/></li>
+<li>邏輯定址</li>
+<li>資料封包 (packet) 的傳輸路徑(Routing)選擇</li>
+<li>功能：1.決定移動資料的最佳方式(RIP、EIGRP、OSPF) 2.資料遶送 3.錯誤控制(少用)</li>
+<li>例子：IP、IPX、路由器</li>
 </ul>
-<br />w8-9 << <a href='w8-9.html'>Previous</a> <a href='資料鏈結層 (Data-Link Layer).html'>Next</a> >> 資料鏈結層 (Data-Link Layer)</div>
+<p><br/>傳輸層 (Transport Layer)<br/><br/></p>
+<ul>
+<li>提供可靠或不可靠的遞送</li>
+<li>重傳之前先校正錯誤</li>
+<li>功能 ：封包順序、資料流量控制、偵測重複的封包、緊急資料的傳送、複雜的錯誤與回復處理、以及安全方面的課題。</li>
+<li>例子 ：TCP 、 UDP</li>
+</ul>
+<p><br/><br/><br/> <br/>交談層 (Session Layer)<span>  </span><span> </span></p>
+<ul>
+<li>負責建立、管理、以及終止兩個通訊主機的對話</li>
+<li>功能 ：使不同應用程式的資料與其他應用程式的資料分開</li>
+<li>例子 ：SQL 、 RPC<span> <br/><br/><br/></span></li>
+</ul>
+<br />資料鏈結層 (Data-Link Layer) << <a href='資料鏈結層 (Data-Link Layer).html'>Previous</a> <a href='表現層 (Presentation Layer.html'>Next</a> >> 表現層 (Presentation Layer</div>
         
     <!-- footer -->
       <div class="container">
