--- a/content/資料鏈結層 (Data-Link Layer).html
+++ b/content/資料鏈結層 (Data-Link Layer).html
@@ -154,16 +154,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w8-9 << <a href='w8-9.html'>Previous</a> <a href='資料鏈結層 (Data-Link Layer).html'>Next</a> >> 資料鏈結層 (Data-Link Layer)<br /><h1>網路架構與設定簡介</h1>
-<p>在正式進入主題之前，先來了解為何網路使用分層結構，而非從頭到腳一手全包的設計。由於網路需考量許多實際應用上的困難，如傳輸不同種類的資訊、不同版本以及作業系統的交流需求，甚至牽扯到更廣大的範圍，如遠距微波傳送、跨洲海底電纜等不同傳輸媒介。如果要設計能夠包山包海、全部通吃的網路架構是件吃力不討好的事，況且也無法預測未來會出現什麼需求，於是需要個具有彈性的網路架構，還要能夠兼顧未來發展</p>
-<p></p>
-<p><br/><br/><br/>實體層 (Physical Layer)</p>
+    <div id="tipue_search_content">網路架構與設定簡介 << <a href='網路架構與設定簡介.html'>Previous</a> <a href='網路層 (Network Layer).html'>Next</a> >> 網路層 (Network Layer)<br /><h1>資料鏈結層 (Data-Link Layer)</h1>
 <ul>
-<li>訂定電腦連接的電氣特定協定</li>
-<li>功能 :1.讓資料可經由傳輸媒介   2.兩個實際相連的機器間傳送的</li>
-<li>例子 :實體層介面有EIA RE-232、RS-449等，而常見區域網路則有乙太網路、記號環、分散式光纖數據介面、CCITT X.25分封網路、整體服務數位網路、同步光學網路等。<br/><br/></li>
+<li>訊框 (frame) 與實體位置 (MAC)</li>
+<li>分為兩個子層：</li>
+<li>(一)邏輯連結控制(Logical Link Control, 簡稱LLC)：訊框遞送、錯誤通知、資料流控制</li>
+<li>(二)媒介存取控制(Media Access Control, 簡稱MAC)：定義傳輸媒體存取的方式，如CSMA/CD、Token Ring等</li>
+<li>例子 ：Physical Address、<span>OSI規定網路上各乙太網路、記號環網路、橋接器等都是在此層運作的。</span></li>
 </ul>
-<br />w8-9 << <a href='w8-9.html'>Previous</a> <a href='資料鏈結層 (Data-Link Layer).html'>Next</a> >> 資料鏈結層 (Data-Link Layer)</div>
+<br />網路架構與設定簡介 << <a href='網路架構與設定簡介.html'>Previous</a> <a href='網路層 (Network Layer).html'>Next</a> >> 網路層 (Network Layer)</div>
         
     <!-- footer -->
       <div class="container">
