--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -10,7 +10,7 @@
 <h2><span>網路架構與設定簡介</span></h2>
 <p>在正式進入主題之前，先來了解為何網路使用分層結構，而非從頭到腳一手全包的設計。由於網路需考量許多實際應用上的困難，如傳輸不同種類的資訊、不同版本以及作業系統的交流需求，甚至牽扯到更廣大的範圍，如遠距微波傳送、跨洲海底電纜等不同傳輸媒介。如果要設計能夠包山包海、全部通吃的網路架構是件吃力不討好的事，況且也無法預測未來會出現什麼需求，於是需要個具有彈性的網路架構，還要能夠兼顧未來發展</p>
 <p></p>
-<br/><br/><br/>實體層 (Physical Layer)
+<p><br/><br/><br/>實體層 (Physical Layer)</p>
 <ul>
 <li>訂定電腦連接的電氣特定協定</li>
 <li>功能 :1.讓資料可經由傳輸媒介   2.兩個實際相連的機器間傳送的</li>
