--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -64,3 +64,5 @@
 <h3><span><br/>硬碟：硬碟就是電腦中負責儲存資料的工具，它就像是一各資料庫依樣，電腦中的大小資料均可以在此找到</span></h3>
 <h3><span><br/>軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。<br/></span></h3>
 <h3><span> </span></h3>
+<h1><span>w10</span></h1>
+<h5><span>ssh===secure share<br/>putty 權限軟體<br/>prtvate key<br/>public key<br/>ssh-keygen -t rsa -b 4096 -C "50833109"<br/>pwd=== print working directory<br/><br/><br/></span></h5>
