--- a/content/w11.html
+++ b/content/w11.html
@@ -154,8 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。 << <a href='軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。.html'>Previous</a> <a href='w10.html'>Next</a> >> w10<br /><h1></h1>
-<br />軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。 << <a href='軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
+    <div id="tipue_search_content">w10 << <a href='w10.html'>Previous</a> <br /><h1>w11</h1>
+<p><span></span></p><br />w10 << <a href='w10.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
