--- a/config/content.htm
+++ b/config/content.htm
@@ -1,13 +1,29 @@
 <h1>w1-w2</h1>
 <p>建立一個bloger <a href="https://www.blogger.com/blogger.g?blogID=2375246514797626273#allposts/src=sidebar">https://www.blogger.com/blogger.g?blogID=2375246514797626273#allposts/src=sidebar</a><br/><br/>建立一個github <a href="https://github.com/">https://github.com/</a>50833109<br/> <br/>1 super computer 超級電腦<br/>2 mainframe 伺服器主機<br/>3 server 伺服器 虛擬 實體<br/>4 pc 個人電腦<br/>5 microcontroller 微控制器<br/>6 mobile phone 手機<br/><br/>Port 戶號<br/>Nat <br/>DHCP動態網路位置</p>
 <h1>w6-7</h1>
-<p>利用手機鏡頭當作 webcam:</p>
+<h2>利用手機鏡頭當作 webcam</h2>
 <p>Android:<span> </span><a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows<br/></a> <br/>iPhone:<span> </span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a> </p>
+<h2>讓手機可以利用電腦熱點上網</h2>
+<p>採用 <a href="https://www.tp-link.com/us/home-networking/usb-adapter/tl-wn725n/">https://www.tp-link.com/us/home-networking/usb-adapter/tl-wn725n/</a></p>
+<p>將此一 USB Wifi adapter 連接電腦後, 若網路為 IPv4 協定時, 可以透過"設定 -&gt; 網路和網際網路 -&gt; 行動熱點", 選擇開啟並編輯"網路名稱與網路密碼"後, 讓至多 8 台手機透過熱點連線上網.</p>
+<p>但是因為目前 Windows 10 並<a href="https://answers.microsoft.com/en-us/windows/forum/all/support-ipv6-in-mobile-hotspot-network-sharing/8801ea57-c6dc-4c10-afe6-192879a85835">未提供 IPv6 網路協定下的網路熱點功能</a>, 因此在純 IPv6 網路協定下無法使用"行動熱點"服務.<br/><br/></p>
+<h2>需要 clone 個人倉儲時</h2>
+<p>git clone --recurse-submodules 倉儲_url.git</p>
+<p>例如: git clone --recurse-submodules<span> </span><a href="https://github.com/mdecourse/wcmj2020.git">https://github.com/mdecourse/wcmj2020.git</a></p>
+<h2>現場直播的 audio 錄音設定</h2>
+<p>在電腦輔助設計室進行直播時, 由於現場有擴音設備, 因此採用 OBS 串流至 Youtube 的最佳收音並非從 Webcam 的麥克風, 而是從擴音器以 audio outpu 連接到電腦的麥克風插槽, 然後將 OBS 的 audio 設定為從電腦的麥克風收音.</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/5qTYqHULS7A" width="560"></iframe></p>
+<p><br/><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/xYZLwLaUG6U" width="560"></iframe>下載可攜程式系統</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/IOauashmKho" width="560"></iframe></p>
+<h3>利用 git 指令建立 cmsimde 網站</h3>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/NJTQulLMXnU" width="560"></iframe></p>
 <h1>w8-9</h1>
-<p><br/><br/><br/><br/><br/><span>meeting     </span><a href="https://meet.google.com/zen-ewrh-zfy">https://meet.google.com/zen-ewrh-zfy</a><span> 第四組<span> </span></span><br/><span>2001:288:6004:17::53</span><br/><span>2001:288:6004:17::42<br/></span><span>2001:288:6004:17::17<br/>2001:288:6004:17::4 "虛擬主機 不耐操 可以校外連接"</span> <br/>可能線上上課<br/>組員:<span> </span><span class="number">50833102 組長<br/></span><span> </span><span class="number">50833103</span><span> <br/></span><span class="number">50833105</span><span> <br/></span><span class="number">50833109</span><span> <br/></span><span class="number">50833121</span><span> <br/></span><span class="number">50833124</span><span> <br/></span><span class="number">50833135</span><span> <br/></span><span class="number">50833136</span><span> <br/></span><span class="number">50833137<br/></span><span> </span><span class="number">50833139 <span>group </span><span class="number">4</span></span> <span></span></p>
+<p><br/><br/><br/><br/>w8<br/><span></span> <br/><span>meeting     </span><a href="https://meet.google.com/zen-ewrh-zfy">https://meet.google.com/zen-ewrh-zfy</a><span> 第四組<span> </span></span><br/><span>2001:288:6004:17::53</span><br/><span>2001:288:6004:17::42<br/></span><span>2001:288:6004:17::17<br/>2001:288:6004:17::4 "虛擬主機 不耐操 可以校外連接"</span> <br/>可能線上上課<br/>組員:<span> </span><span class="number">50833102 組長<br/></span><span> </span><span class="number">50833103</span><span> <br/></span><span class="number">50833105</span><span> <br/></span><span class="number">50833109</span><span> <br/></span><span class="number">50833121</span><span> <br/></span><span class="number">50833124</span><span> <br/></span><span class="number">50833135</span><span> <br/></span><span class="number">50833136</span><span> <br/></span><span class="number">50833137<br/></span><span> </span><span class="number">50833139 <span>group </span><span class="number">4</span></span> <span></span></p>
 <p><span class="number"><span class="number"></span></span></p>
-<p><br/><br/>w9<br/><br/></p>
-<h2><span>網路架構與設定簡介</span></h2>
+<p><br/><br/><br/>w9</p>
+<p><a href="https://drive.google.com/file/d/1mqtHKdD2EDJjUvfs76T1-Cs0OwXVJtvO/view?usp=sharing">wcmj2020 W9 第一段影片</a></p>
+<p><a href="https://drive.google.com/file/d/1mSFCPGNaO_DYAjOA-C2QL1HessDL0R4H/view?usp=sharing">wcmj2020 W9 第二段影片</a></p>
+<h2>網路架構與設定簡介</h2>
 <p>在正式進入主題之前，先來了解為何網路使用分層結構，而非從頭到腳一手全包的設計。由於網路需考量許多實際應用上的困難，如傳輸不同種類的資訊、不同版本以及作業系統的交流需求，甚至牽扯到更廣大的範圍，如遠距微波傳送、跨洲海底電纜等不同傳輸媒介。如果要設計能夠包山包海、全部通吃的網路架構是件吃力不討好的事，況且也無法預測未來會出現什麼需求，於是需要個具有彈性的網路架構，還要能夠兼顧未來發展</p>
 <p></p>
 <p><br/><br/><br/>實體層 (Physical Layer)</p>
@@ -56,15 +72,15 @@
 <li>功能：檔案、印表、訊息、資料庫、應用服務</li>
 <li>例子：HTTP 、 Telnet 、 SMTP 、 POP3 、 FTP 、 SNMP</li>
 </ul>
-<h2><span>電腦軟硬體簡介</span></h2>
-<h3><span>機殼：容納和保護主機營體的主機殼</span></h3>
-<h3><span><br/>電源(Power)：是提供內接式元件電力來源的組件，他將市電轉換為直流電供給其他元件使用</span></h3>
-<h3><span><br/>顯示卡(VGA )：顯示卡在電腦中主要作用就是程式運行時根據CPU提共的指令和有關數據</span></h3>
-<h3><span><br/>網路卡：網路卡是電腦與纜線的介面，有依各專門處裡網路介面的處裡器，會依照記憶體內程式動作。</span></h3>
-<h3><span><br/>硬碟：硬碟就是電腦中負責儲存資料的工具，它就像是一各資料庫依樣，電腦中的大小資料均可以在此找到</span></h3>
-<h3><span><br/>軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。<br/></span></h3>
-<h3><span> </span></h3>
-<h1><span>w10</span></h1>
+<h2>電腦軟硬體簡介</h2>
+<h3>機殼：容納和保護主機營體的主機殼</h3>
+<h3>電源(Power)：是提供內接式元件電力來源的組件，他將市電轉換為直流電供給其他元件使用</h3>
+<h3>顯示卡(VGA )：顯示卡在電腦中主要作用就是程式運行時根據CPU提共的指令和有關數據</h3>
+<h3>網路卡：網路卡是電腦與纜線的介面，有依各專門處裡網路介面的處裡器，會依照記憶體內程式動作。</h3>
+<h3>硬碟：硬碟就是電腦中負責儲存資料的工具，它就像是一各資料庫依樣，電腦中的大小資料均可以在此找到</h3>
+<h3>軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。</h3>
+<h1>w10</h1>
 <h5><span>ssh===secure share<br/>putty 權限軟體<br/>prtvate key<br/>public key<br/>ssh-keygen -t rsa -b 4096 -C "50833109"<br/>pwd=== print working directory<br/><br/><br/></span></h5>
-<h1><span>w11<br/></span></h1>
+<p><a href="https://drive.google.com/file/d/1mqtHKdD2EDJjUvfs76T1-Cs0OwXVJtvO/view?usp=sharing"></a></p>
+<h1>w11</h1>
 <p><span></span></p>
