--- a/config/content.htm
+++ b/config/content.htm
@@ -1,5 +1,6 @@
 <h1>w1-w2</h1>
 <p>建立一個bloger <a href="https://www.blogger.com/blogger.g?blogID=2375246514797626273#allposts/src=sidebar">https://www.blogger.com/blogger.g?blogID=2375246514797626273#allposts/src=sidebar</a><br/><br/>建立一個github <a href="https://github.com/">https://github.com/</a>50833109<br/> <br/>1 super computer 超級電腦<br/>2 mainframe 伺服器主機<br/>3 server 伺服器 虛擬 實體<br/>4 pc 個人電腦<br/>5 microcontroller 微控制器<br/>6 mobile phone 手機<br/><br/>Port 戶號<br/>Nat <br/>DHCP動態網路位置</p>
+<p><img alt="SpongeBob SquarePants (character) - Wikipedia" src="https://upload.wikimedia.org/wikipedia/en/thumb/3/3b/SpongeBob_SquarePants_character.svg/1200px-SpongeBob_SquarePants_character.svg.png"/></p>
 <h1>w6-7</h1>
 <h2>利用手機鏡頭當作 webcam</h2>
 <p>Android:<span> </span><a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows<br/></a> <br/>iPhone:<span> </span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a> </p>
@@ -20,7 +21,7 @@
 <h1>w8-9</h1>
 <p><br/><br/><br/><br/>w8<br/><span></span> <br/><span>meeting     </span><a href="https://meet.google.com/zen-ewrh-zfy">https://meet.google.com/zen-ewrh-zfy</a><span> 第四組<span> </span></span><br/><span>2001:288:6004:17::53</span><br/><span>2001:288:6004:17::42<br/></span><span>2001:288:6004:17::17<br/>2001:288:6004:17::4 "虛擬主機 不耐操 可以校外連接"</span> <br/>可能線上上課<br/>組員:<span> </span><span class="number">50833102 組長<br/></span><span> </span><span class="number">50833103</span><span> <br/></span><span class="number">50833105</span><span> <br/></span><span class="number">50833109</span><span> <br/></span><span class="number">50833121</span><span> <br/></span><span class="number">50833124</span><span> <br/></span><span class="number">50833135</span><span> <br/></span><span class="number">50833136</span><span> <br/></span><span class="number">50833137<br/></span><span> </span><span class="number">50833139 <span>group </span><span class="number">4</span></span> <span></span></p>
 <p><span class="number"><span class="number"></span></span></p>
-<p><br/><br/><br/>w9</p>
+<p><img alt="Anton Ego | Wiki | Pixar Amino BR Amino" src="https://pm1.narvii.com/6891/ba6733d3dc9fd0605636d40c50ed235f4ccd9144r1-551-632v2_uhq.jpg"/><br/><br/><br/>w9</p>
 <p><a href="https://drive.google.com/file/d/1mqtHKdD2EDJjUvfs76T1-Cs0OwXVJtvO/view?usp=sharing">wcmj2020 W9 第一段影片</a></p>
 <p><a href="https://drive.google.com/file/d/1mSFCPGNaO_DYAjOA-C2QL1HessDL0R4H/view?usp=sharing">wcmj2020 W9 第二段影片</a></p>
 <h2>網路架構與設定簡介</h2>
