--- a/content/w12-13.html
+++ b/content/w12-13.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='w1-w2.html'>w1-w2</a><li class='has-children'><a href='w6-7.html'>w6-7</a><ul class='dropdown'><li><a href='利用手機鏡頭當作 webcam.html'>利用手機鏡頭當作 webcam</a><li><a href='讓手機可以利用電腦熱點上網.html'>讓手機可以利用電腦熱點上網</a><li><a href='需要 clone 個人倉儲時.html'>需要 clone 個人倉儲時</a><li class='has-children'><a href='現場直播的 audio 錄音設定.html'>現場直播的 audio 錄音設定</a><ul class='dropdown'><li><a href='利用 git 指令建立 cmsimde 網站.html'>利用 git 指令建立 cmsimde 網站</a></li></li></ul></ul><li class='has-children'><a href='w8-9.html'>w8-9</a><ul class='dropdown'><li class='has-children'><a href='網路架構與設定簡介.html'>網路架構與設定簡介</a><ul class='dropdown'><li><a href='資料鏈結層 (Data-Link Layer).html'>資料鏈結層 (Data-Link Layer)</a><li><a href='網路層 (Network Layer).html'>網路層 (Network Layer)</a><li><a href='表現層 (Presentation Layer.html'>表現層 (Presentation Layer</a><li><a href='應用層 (Application Layer).html'>應用層 (Application Layer)</a></li></ul><li class='has-children'><a href='電腦軟硬體簡介.html'>電腦軟硬體簡介</a><ul class='dropdown'><li><a href='機殼：容納和保護主機營體的主機殼.html'>機殼：容納和保護主機營體的主機殼</a><li><a href='電源(Power)：是提供內接式元件電力來源的組件，他將市電轉換為直流電供給其他元件使用.html'>電源(Power)：是提供內接式元件電力來源的組件，他將市電轉換為直流電供給其他元件使用</a><li><a href='顯示卡(VGA )：顯示卡在電腦中主要作用就是程式運行時根據CPU提共的指令和有關數據.html'>顯示卡(VGA )：顯示卡在電腦中主要作用就是程式運行時根據CPU提共的指令和有關數據</a><li><a href='網路卡：網路卡是電腦與纜線的介面，有依各專門處裡網路介面的處裡器，會依照記憶體內程式動作。.html'>網路卡：網路卡是電腦與纜線的介面，有依各專門處裡網路介面的處裡器，會依照記憶體內程式動作。</a><li><a href='硬碟：硬碟就是電腦中負責儲存資料的工具，它就像是一各資料庫依樣，電腦中的大小資料均可以在此找到.html'>硬碟：硬碟就是電腦中負責儲存資料的工具，它就像是一各資料庫依樣，電腦中的大小資料均可以在此找到</a><li><a href='軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。.html'>軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。</a></li></li></ul></ul><li><a href='w10.html'>w10</a><li><a href='w12-13.html'>w12-13</a></li>
+                     <li><a href='w1-w2.html'>w1-w2</a><li class='has-children'><a href='w6-7.html'>w6-7</a><ul class='dropdown'><li><a href='利用手機鏡頭當作 webcam.html'>利用手機鏡頭當作 webcam</a><li><a href='讓手機可以利用電腦熱點上網.html'>讓手機可以利用電腦熱點上網</a><li><a href='需要 clone 個人倉儲時.html'>需要 clone 個人倉儲時</a><li class='has-children'><a href='現場直播的 audio 錄音設定.html'>現場直播的 audio 錄音設定</a><ul class='dropdown'><li><a href='利用 git 指令建立 cmsimde 網站.html'>利用 git 指令建立 cmsimde 網站</a></li></li></ul></ul><li class='has-children'><a href='w8-9.html'>w8-9</a><ul class='dropdown'><li class='has-children'><a href='網路架構與設定簡介.html'>網路架構與設定簡介</a><ul class='dropdown'><li><a href='資料鏈結層 (Data-Link Layer).html'>資料鏈結層 (Data-Link Layer)</a><li><a href='網路層 (Network Layer).html'>網路層 (Network Layer)</a><li><a href='表現層 (Presentation Layer.html'>表現層 (Presentation Layer</a><li><a href='應用層 (Application Layer).html'>應用層 (Application Layer)</a></li></ul><li class='has-children'><a href='電腦軟硬體簡介.html'>電腦軟硬體簡介</a><ul class='dropdown'><li><a href='機殼：容納和保護主機營體的主機殼.html'>機殼：容納和保護主機營體的主機殼</a><li><a href='電源(Power)：是提供內接式元件電力來源的組件，他將市電轉換為直流電供給其他元件使用.html'>電源(Power)：是提供內接式元件電力來源的組件，他將市電轉換為直流電供給其他元件使用</a><li><a href='顯示卡(VGA )：顯示卡在電腦中主要作用就是程式運行時根據CPU提共的指令和有關數據.html'>顯示卡(VGA )：顯示卡在電腦中主要作用就是程式運行時根據CPU提共的指令和有關數據</a><li><a href='網路卡：網路卡是電腦與纜線的介面，有依各專門處裡網路介面的處裡器，會依照記憶體內程式動作。.html'>網路卡：網路卡是電腦與纜線的介面，有依各專門處裡網路介面的處裡器，會依照記憶體內程式動作。</a><li><a href='硬碟：硬碟就是電腦中負責儲存資料的工具，它就像是一各資料庫依樣，電腦中的大小資料均可以在此找到.html'>硬碟：硬碟就是電腦中負責儲存資料的工具，它就像是一各資料庫依樣，電腦中的大小資料均可以在此找到</a><li><a href='軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。.html'>軟碟機：軟碟機又叫磁碟機，是一種儲存資料的工具，當拰要儲存檔案大小在1.44MB以下的資料時，磁碟片畢竟是一項蠻方便操作且攜帶的設備，所以軟碟機也可稱為磁片機。</a></li></li></ul></ul><li><a href='w10.html'>w10</a><li><a href='w12-13.html'>w12-13</a><li><a href='以 SSH 維護倉儲.html'>以 SSH 維護倉儲</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w10 << <a href='w10.html'>Previous</a> <br /><h1>w12-13</h1>
+    <div id="tipue_search_content">w10 << <a href='w10.html'>Previous</a> <a href='以 SSH 維護倉儲.html'>Next</a> >> 以 SSH 維護倉儲<br /><h1>w12-13</h1>
 <h4>基本概念:</h4>
 <h4>1. 這裡所指的 Blogger API 為:<span> </span><a href="https://developers.google.com/blogger/docs/3.0/using">https://developers.google.com/blogger/docs/3.0/using</a></h4>
 <h4>2. 將 CMSiMDE 中的 Pelican Blog 內容同步到 Google Blogger 的目的, 在讓網際內容管理系統中的網誌原始資料修改過程具備版次, 而且可同時將網誌出版在 Github Pages 與 Google Blogger 中, 讓網際內容的保存較具有永續性.</h4>
@@ -224,7 +224,7 @@ img.add_border {
 </tr>
 </tbody>
 </table>
-<p><span></span></p><br />w10 << <a href='w10.html'>Previous</a> </div>
+<br />w10 << <a href='w10.html'>Previous</a> <a href='以 SSH 維護倉儲.html'>Next</a> >> 以 SSH 維護倉儲</div>
         
     <!-- footer -->
       <div class="container">
